# srag-analytics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  pyproject.toml  run.sh  setup.sh
backend/: main.py
backend/agents/: __init__.py  chat_agent.py  guardrails.py  prompts.py  report_agent.py
backend/config/: settings.py
backend/db/: connection.py  dictionary_parser.py  ingestion.py  init_database.py  models.py
backend/tools/: metrics_tool.py  news_tool.py  rag_tool.py  sql_tool.py
docs/: SQL_TOOL_IMPLEMENTATION_GUIDE.md  architecture.md  generate_workflow_diagram.py
frontend/: app.py
infra/: init.sql
mem_graph/: codebase_graph.jsonl
scripts/: startup.sh
